--- a/package.json
+++ b/package.json
@@ -1,40 +1,43 @@
 {
   "name": "joker-api-core",
   "private": true,
-  "version": "0.0.0",
-  "main": "dist/joker-api-core.umd.js",
-  "module": "dist/joker-api-core.js",
-  "types": "dist/index.d.ts",
+  "version": "1.0.0",
+  "main": "joker-api-core.mjs",
+  "module": "joker-api-core.mjs",
+  "types": "main.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "import": "./dist/joker-api-core.mjs",
+      "types": "./dist/main.d.ts"
     }
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc  && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.6.1",
+    "@reduxjs/toolkit": "2.6.1",
     "@types/crypto-js": "4.2.2",
     "axios": "1.9.0",
     "crypto-js": "4.2.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-redux": "^9.2.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-redux": "9.2.0",
     "react-router-dom": "7.6.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "6.0.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.4.1",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "@eslint/js": "9.25.0",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.2",
+    "@vitejs/plugin-react": "4.4.1",
+    "eslint": "9.25.0",
+    "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "typescript": "~5.8.3",
