--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,22 @@
 {
-  "compilerOptions": {
-    "target": "esnext",
+ "compilerOptions": {
+    "target": "ESNext",
     "module": "ESNext",
-    "lib": [
-      "DOM",
-      "ES6"
-    ],
-    "paths": {
-      "react": [
-        "./node_modules/@types/react",
-      ],
-    },
-    
-    "allowJs": true,
-    "jsx": "react-jsx",
+    "lib": ["DOM", "ESNext"],
+    "declaration": true,
+    "declarationMap": true,
+    "emitDeclarationOnly": true,
+    "outDir": "dist",
+    "rootDir": "src",
     "moduleResolution": "node",
+  
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "noImplicitAny": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "./dist",
-    "types": ["vite/client"]
+    "jsx": "react-jsx",
+    "noImplicitAny": false
   },
-  "exclude": [
-    "node_modules",
-    "build", "dist"
-  ],
-  "include": ["src", "src/global.d.ts", "types", "vite.config.ts", "eslint.config.js",  "modules/joker-api-core/src"],
-
+  "include": ["src"]
 }
