--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "1.9.0"
+  },
+  "peerDependencies": {
     "@reduxjs/toolkit": "2.6.1",
     "@types/crypto-js": "4.2.2",
-    "axios": "1.9.0",
     "crypto-js": "4.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
