--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "tsc  && vite build",
+    "build:types": "dts-bundle-generator --external-inlines -o dist/main.d.ts src/main.ts",
+    "build": "yarn build:types && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -35,9 +36,11 @@
   },
   "devDependencies": {
     "@eslint/js": "9.25.0",
+    "@types/dts-bundle": "^0",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
     "@vitejs/plugin-react": "4.4.1",
+    "dts-bundle-generator": "^8.0.0",
     "eslint": "9.25.0",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
